training notebook (will add analysis section), some io/util scripts

--- a/MNIST LeNet.ipynb
+++ b/MNIST LeNet.ipynb
@@ -116,7 +116,7 @@
    "metadata": {},
    "source": [
     "## Defining a network\n",
-    "In `pytorch`, a network is defined as a `torch.Module` inherited class. All `torch.Module` have two functions: _forward_ and _backward_. The forward function runs data through the CNN and makes a prediction. The backward propagates gradient, computed based on the error from the forward function call, to train the network. \n",
+    "In `pytorch`, a network is defined as a `torch.Module` inherited class. In this class, we define the network architecture as well as a _forward_ function to process input image data and perform a digit classification task.\n",
     "\n",
     "LeNet has 2 convolution layers, each followed by rectified linear unit (ReLU) and max-pooling, for feature extractions. Then the extracted features run through two hidden layers multi-layer perceptron (MLP) at the end for classifying the input image data into digits (0 to 9)."
    ]
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We define 2 functions to be called in the training loop: forward and backward. These functions implement the evaluation of the results, error (loss) definition, and propagation of errors (gradients) back to update the network parameters."
+    "We define 2 functions to be called in the training loop: _forward_ and _backward_. These functions implement the evaluation of the results, error (loss) definition, and propagation of errors (gradients) back to update the network parameters. The name \"backward\" is because the computation starts from the error (=end result of forward) and proceed toward the input (=start of forward)."
    ]
   },
   {
