--- a/HKML DataLoader.ipynb
+++ b/HKML DataLoader.ipynb
@@ -120,8 +120,7 @@
    ],
    "source": [
     "# Data directories: let's use e- and mu-\n",
-    "BASE_DIR = '/data/hkml_data/128x128'\n",
-    "DATA_DIRS = [BASE_DIR+'/mu-',BASE_DIR+'/e-']\n",
+    "DATA_DIRS = ['/scratch/kterao/hkml_data/2d/muminus','/scratch/kterao/hkml_data/2d/eminus']\n",
     "# Craete an instance\n",
     "ds = HKDataset(DATA_DIRS)\n",
     "print(len(ds),'total events are loaded!')"
@@ -269,29 +268,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0 ... time: 10.7341868877 [s]\n",
-      "    Labels: [2, 2, 2, 2, 2]\n",
-      "    Index : [3989, 10453, 4218, 8946, 3061] \n",
+      "Iteration 0 ... time: 6.0243601799 [s]\n",
+      "    Labels: [2, 1, 2, 2, 1]\n",
+      "    Index : [9929, 23361, 13852, 11487, 24578] \n",
       "\n",
-      "Iteration 1 ... time: 10.5659570694 [s]\n",
+      "Iteration 1 ... time: 5.70613002777 [s]\n",
       "    Labels: [2, 1, 1, 2, 2]\n",
-      "    Index : [9845, 25245, 21835, 5184, 12156] \n",
+      "    Index : [5811, 18119, 23952, 709, 14916] \n",
       "\n",
-      "Iteration 2 ... time: 7.08139801025 [s]\n",
-      "    Labels: [2, 1, 1, 1, 2]\n",
-      "    Index : [1300, 22801, 21926, 19360, 9036] \n",
+      "Iteration 2 ... time: 5.89799404144 [s]\n",
+      "    Labels: [2, 2, 2, 1, 1]\n",
+      "    Index : [8966, 5611, 13569, 22054, 16316] \n",
       "\n",
-      "Iteration 3 ... time: 5.68224406242 [s]\n",
-      "    Labels: [1, 1, 2, 2, 1]\n",
-      "    Index : [22463, 16484, 257, 12117, 19974] \n",
+      "Iteration 3 ... time: 5.2024679184 [s]\n",
+      "    Labels: [2, 1, 1, 1, 1]\n",
+      "    Index : [6612, 23651, 21302, 18721, 22733] \n",
       "\n",
-      "Iteration 4 ... time: 7.45384502411 [s]\n",
-      "    Labels: [1, 1, 2, 2, 2]\n",
-      "    Index : [24235, 24861, 3170, 4485, 9223] \n",
+      "Iteration 4 ... time: 6.37095189095 [s]\n",
+      "    Labels: [2, 2, 2, 2, 2]\n",
+      "    Index : [606, 14386, 15103, 11438, 10649] \n",
       "\n",
-      "Overall average iteration time: 8.305006 [s]\n",
-      "First event     iteration time: 10.7362385 [s]\n",
-      "After first event average time: 7.6971974 [s]\n"
+      "Overall average iteration time: 5.841918 [s]\n",
+      "First event     iteration time: 6.0267143 [s]\n",
+      "After first event average time: 5.7957187 [s]\n"
      ]
     }
    ],
@@ -327,49 +326,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 0 ... time: 40.019671917 [s]\n",
-      "    Labels: [1, 1, 2, 2, 2]\n",
-      "    Index : [16465, 16830, 14768, 6368, 11039] \n",
+      "Iteration 0 ... time: 7.8519949913 [s]\n",
+      "    Labels: [2, 2, 1, 1, 2]\n",
+      "    Index : [4753, 15021, 18908, 21195, 6830] \n",
       "\n",
-      "Iteration 1 ... time: 2.56701898575 [s]\n",
+      "Iteration 1 ... time: 0.809750080109 [s]\n",
+      "    Labels: [1, 2, 2, 2, 2]\n",
+      "    Index : [16615, 12437, 4140, 14899, 14000] \n",
+      "\n",
+      "Iteration 2 ... time: 0.000488042831421 [s]\n",
+      "    Labels: [2, 2, 2, 1, 2]\n",
+      "    Index : [8951, 3691, 13423, 20795, 2859] \n",
+      "\n",
+      "Iteration 3 ... time: 5.10215759277e-05 [s]\n",
       "    Labels: [2, 1, 2, 2, 2]\n",
-      "    Index : [8891, 20293, 3603, 14160, 8846] \n",
+      "    Index : [4246, 24115, 8945, 12991, 12054] \n",
       "\n",
-      "Iteration 2 ... time: 0.796099901199 [s]\n",
-      "    Labels: [2, 1, 2, 2, 2]\n",
-      "    Index : [4037, 24702, 10039, 2228, 9024] \n",
-      "\n",
-      "Iteration 3 ... time: 2.83516907692 [s]\n",
-      "    Labels: [2, 2, 2, 2, 2]\n",
-      "    Index : [4317, 4292, 15003, 1158, 2732] \n",
-      "\n",
-      "Iteration 4 ... time: 3.12328338623e-05 [s]\n",
-      "    Labels: [1, 2, 2, 2, 1]\n",
-      "    Index : [16167, 14117, 11574, 3386, 24889] \n",
-      "\n",
-      "Iteration 5 ... time: 2.69412994385e-05 [s]\n",
-      "    Labels: [2, 2, 2, 2, 1]\n",
-      "    Index : [5926, 68, 5670, 2143, 18898] \n",
-      "\n",
-      "Iteration 6 ... time: 2.90870666504e-05 [s]\n",
+      "Iteration 4 ... time: 4.6968460083e-05 [s]\n",
       "    Labels: [2, 1, 1, 2, 2]\n",
-      "    Index : [1689, 24194, 18217, 9337, 13078] \n",
+      "    Index : [12918, 17537, 23444, 1387, 11583] \n",
       "\n",
-      "Iteration 7 ... time: 6.00814819336e-05 [s]\n",
-      "    Labels: [2, 2, 1, 2, 2]\n",
-      "    Index : [2612, 8050, 21072, 7095, 10451] \n",
+      "Iteration 5 ... time: 0.00012993812561 [s]\n",
+      "    Labels: [2, 1, 2, 2, 1]\n",
+      "    Index : [10357, 19752, 8765, 11220, 18703] \n",
       "\n",
-      "Iteration 8 ... time: 0.000130891799927 [s]\n",
-      "    Labels: [2, 1, 2, 2, 2]\n",
-      "    Index : [714, 17788, 14574, 8643, 11195] \n",
+      "Iteration 6 ... time: 0.0913889408112 [s]\n",
+      "    Labels: [2, 2, 2, 1, 2]\n",
+      "    Index : [8100, 9157, 14194, 22520, 9166] \n",
       "\n",
-      "Iteration 9 ... time: 0.0001220703125 [s]\n",
-      "    Labels: [2, 2, 2, 2, 1]\n",
-      "    Index : [6864, 5411, 11013, 9043, 19118] \n",
+      "Iteration 7 ... time: 3.60012054443e-05 [s]\n",
+      "    Labels: [1, 2, 1, 1, 2]\n",
+      "    Index : [17865, 10158, 24577, 22101, 1558] \n",
       "\n",
-      "Overall average iteration time: 4.6225214 [s]\n",
-      "First event     iteration time: 40.020103 [s]\n",
-      "After first event average time: 0.6894563 [s]\n"
+      "Iteration 8 ... time: 9.51290130615e-05 [s]\n",
+      "    Labels: [1, 1, 1, 1, 2]\n",
+      "    Index : [21176, 23232, 20694, 20400, 5414] \n",
+      "\n",
+      "Iteration 9 ... time: 5.10215759277e-05 [s]\n",
+      "    Labels: [1, 2, 2, 1, 1]\n",
+      "    Index : [18835, 13666, 13127, 24657, 17760] \n",
+      "\n",
+      "Overall average iteration time: 0.87667865 [s]\n",
+      "First event     iteration time: 7.85535 [s]\n",
+      "After first event average time: 0.101270676 [s]\n"
      ]
     }
    ],
