introductory notebooks done

--- a/Pytorch Tensor Playground.ipynb
+++ b/Pytorch Tensor Playground.ipynb
@@ -114,13 +114,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean 0.10000000149 std 0.301511347294 sum tensor(10.)\n"
+      "mean 0.10000000149 std 0.301511347294 sum 10.0\n"
      ]
     }
    ],
    "source": [
     "# mean & std\n",
-    "print('mean',data_torch.mean().item(),'std',data_torch.std().item(),'sum',data_torch.sum())"
+    "print('mean',data_torch.mean().item(),'std',data_torch.std().item(),'sum',data_torch.sum().item())"
    ]
   },
   {
@@ -195,8 +195,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using CPU: 0.0393888950348 [s]\n",
-      "Using GPU: 0.00360798835754 [s]\n"
+      "Using CPU: 0.141505002975 [s]\n",
+      "Using GPU: 0.0122509002686 [s]\n"
      ]
     }
    ],
