--- a/5 Minutes Introduction to Jupyter Notebook .ipynb
+++ b/5 Minutes Introduction to Jupyter Notebook .ipynb
@@ -12,7 +12,7 @@
     "\n",
     "In a notebook, individual block of code execution is done within a _cell_. All cells in the same notebook live within the same process and namespace scope. You can put explanation of the code (or beyond, like physics for which the code is developed) in a _markdown_ cell. Such explanation can go per code cell. We don't write a software in a notebook, but usually a higher level program (such as _main_ function) with an explanation of what's going on.\n",
     "\n",
-    "Though originally developed for Julia, Python and R (hence \"Jupyter\"), now it supports all kinds of programming language including shell and even fortran(!). Many scientific blog posts are also done in a notebook.\n",
+    "Though originally developed for Julia, Python and R (hence \"Jupyter\"), now it supports all kinds of programming language including shell and even fortran(!). Many scientific blog posts are also done in a notebook. Before we move on, [here](http://arogozhnikov.github.io/2016/09/10/jupyter-features.html#Writing-formulae-in-latex) is a nice blog post about jupyter notebook with comprehensive examples.\n",
     "\n",
     "## Default code engine\n",
     "When you start a notebook, you choose the default backend of the notebook. In this workshop, we are using Python2. Right, we apologize that it's not Python3. That is Kazu's fault.\n",
@@ -226,8 +226,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 58 µs, sys: 4.37 ms, total: 4.42 ms\n",
-      "Wall time: 3.67 ms\n"
+      "CPU times: user 2.13 ms, sys: 1.18 ms, total: 3.31 ms\n",
+      "Wall time: 2.77 ms\n"
      ]
     }
    ],
@@ -282,6 +282,82 @@
     "%%latex\n",
     "\n",
     "I have to write a formula like $\\sin^22\\theta\\left(\\frac{1.27\\Delta m^2L}{E_\\nu}\\right)$ to get Ph.D."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('''<script>\n",
+    "code_show=false; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Executing a web script\n",
+    "Well, all of these fun things are running using `javascript` on `html`... can we run our own webscript execution command? Sure we can! Here's an example to hide all Jupyter code blocks using that feature.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "code_show=false; \n",
+       "function code_toggle() {\n",
+       " if (code_show){\n",
+       " $('div.input').hide();\n",
+       " } else {\n",
+       " $('div.input').show();\n",
+       " }\n",
+       " code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
+       "</script>\n",
+       "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML('''<script>\n",
+    "code_show=false; \n",
+    "function code_toggle() {\n",
+    " if (code_show){\n",
+    " $('div.input').hide();\n",
+    " } else {\n",
+    " $('div.input').show();\n",
+    " }\n",
+    " code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
+    "</script>\n",
+    "To toggle on/off the raw code, click <a href=\"javascript:code_toggle()\">here</a>.''')"
    ]
   }
  ],
